continue button added

--- a/src/main/resources/departmentPage.html
+++ b/src/main/resources/departmentPage.html
@@ -115,6 +115,12 @@
         margin-left:200px;
     }
 
+    #footer {
+        left:90%;
+        bottom: 10%;
+        position: absolute;
+    }
+
 </style>
 
 <body>
@@ -177,6 +183,10 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div id="footer">
+        <button type="submit" style="background-color: yellow; width: 80px; height: 50px">Continue</button>
     </div>
 </div>
 
