--- a/src/main/resources/DiseaseDescriptionPage.html
+++ b/src/main/resources/DiseaseDescriptionPage.html
@@ -6,6 +6,9 @@
     <title >Diseases discription</title>
 
 </head>
+<style>
+    
+</style>
 <body style="background-color:#1aa8a8">
 <h1 style="color: gainsboro;font-size: 50px;margin-top: 1cm;margin-left: 1cm">/WebDoctor/Opathamology/Result</h1>
 <div style="margin-top: 4cm"><a href="http://www.google.com" target="_blank">Related Articles</a></div>
