--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8">
 
     <title >Diseases discription</title>
-
 </head>
 <style>
-    
+    .top {
+
+        left:0; right:0;
+        margin-top: 0;
+        color: darkgrey;
+    }
+    .left {
+        position: absolute;
+        top:140px; bottom: 0;
+        width: 278px;
+        color: white;
+    }
+    .main {
+        position: absolute;
+        font-size: 28px;
+        left:278px; top:92px; right:0; bottom:0;
+        color: #fefefe;
+    }
 </style>
 <body style="background-color:#1aa8a8">
-<h1 style="color: gainsboro;font-size: 50px;margin-top: 1cm;margin-left: 1cm">/WebDoctor/Opathamology/Result</h1>
-<div style="margin-top: 4cm"><a href="http://www.google.com" target="_blank">Related Articles</a></div>
-<div style="margin-top: 0.5cm"><a href="http://www.google.com" target="_blank">What Is Glaucoma?</a></div>
-<div style="margin-top: 0.5cm"><a href="http://www.google.com" target="_blank">Glaucoma <Facts></Facts></a></div>
-<h2 style="color:white;margin-left: 7cm;font-size: 50px">Description</h2>
-<p style="margin-left: 7cm ">........................................</p>
-<h2 style="color:white;margin-left: 7cm;font-size: 50px">Treatment</h2>
-<p style="margin-left: 7cm ">...........</p>
+<div class="top"><h1>/WebDoctor/Opathamology/Result</h1></div>
+<div class="left">
+    <a href="http://www.google.com" target="_blank">Related Articles</a><br>
+    <br>
+    <a href="http://www.google.com" target="_blank" style="margin-top: 1cm">What Is Glaucoma?</a><br>
+    <br>
+    <a href="http://www.google.com" target="_blank">Glaucoma Facts</a>
+</div>
+<div class="main"><h2>Description</h2>
+<p>........................................<br>.............<br>............<br>...........<br>.................</p>
+</div>
 </body>
 </html>
