--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -164,6 +164,7 @@ window.onload = function(){
                     console.log(error);
                 }
         });
+        console.log(res);
     });
     span.onclick = function() {
         modal.style.display = "none";
