--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="grids">
-        <h1 style="border-bottom: 4px solid #e3ae24">5 AVAILABLE DEPARTMENTS</h1>
+        <h1 style="border-bottom: 4px solid #e3ae24">AVAILABLE DEPARTMENTS</h1>
         <ul class="department">
             <li><button id="btn1" type="submit" value="Dermatology">Dermatology</button></li>
             <li><button id="btn2" type="submit" value="Neurology">Neurology</button></li>
@@ -35,28 +35,21 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">CLOSE</span>
-                <h1 style="border-bottom: 4px solid #e3ae24">5 AVAILABLE DEPARTMENTS</h1>
+                <h1 style="border-bottom: 4px solid #e3ae24">AVAILABLE SYMPTOMS</h1>
                 <ul id="symptomList" class="grids" style="margin-left: 5px">
-                    <!--
-                    <li><button type="submit" id="1" value="Dermatology">Dermatology</button></li>
-                    <li><button type="submit" id="2" value="Neurology">Neurology</button></li>
-                    <li><button type="submit" id="3" value="Osteology">Osteology</button></li>
-                    <li><button type="submit" id="4" value="Dick">Dick</button></li>
-                    <li><button type="submit">Arm</button></li><br>
-                    <li><button type="submit">Eye</button></li>
-                    <li><button type="submit">Leg</button></li>
-                    <li><button type="submit">Hand</button></li>
-                    <li><button type="submit">Head</button></li>
-                    <li><button type="submit">Face</button></li><br>
-                    <li><button type="submit">Dermatology</button></li>
-                    <li><button type="submit">Neurology</button></li>
-                    <li><button type="submit">Osteology</button></li>
-                    <li><button type="submit">Dick</button></li>
-                    <li><button type="submit">Arm</button></li><br>
-                    <li><button type="submit">Eye</button></li>
-                    <li><button type="submit">Leg</button></li>
-                    <li><button type="submit">Hand</button></li>
-                    -->
+
+                </ul>
+            </div>
+        </div>
+
+        <!-- The Modal -->
+        <div id="myModal2" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">CLOSE</span>
+                <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
+                <ul id="diseaseList" class="grids" style="margin-left: 5px">
+
                 </ul>
             </div>
         </div>
@@ -73,8 +66,10 @@
 
 window.onload = function(){
     var modal = document.getElementById('myModal');
+    var modal2 = document.getElementById('myModal2');
     var btn = document.getElementsByClassName('department')[0];
     var span = document.getElementsByClassName("close")[0];
+    var span2 = document.getElementsByClassName("close")[1];
     var count = 0;
     $(function(callback){
 
@@ -150,7 +145,8 @@ window.onload = function(){
             arr[i] = elems[i].value;
         }
         console.log(arr);
-        var res = $.ajax({
+        $(function(callback) {
+        $.ajax({
                 url : '/searchByTags',
                 type : 'POST',
                 dataType: 'json',
@@ -163,8 +159,24 @@ window.onload = function(){
                 error : function (error) {
                     console.log(error);
                 }
+            }).done(function(result) {
+                console.log(result[0]);
+                var diseaseList = document.getElementById('diseaseList');
+                for (var k in result) {
+                    console.log(result[k])
+                    var li = document.createElement("li");
+                    var btn = document.createElement("BUTTON");
+                    btn.setAttribute("value", result[k]);
+                    btn.appendChild(document.createTextNode(result[k]));
+                    li.appendChild(btn);
+                    li.style.margin = "5px";
+                    diseaseList.appendChild(li);
+                    console.log("level3");
+                }
+            });
         });
-        console.log(res);
+
+        modal2.style.display = "block";
     });
     span.onclick = function() {
         modal.style.display = "none";
@@ -172,6 +184,14 @@ window.onload = function(){
         while (symptomList.firstChild) {
             symptomList.removeChild(symptomList.firstChild);
         }
+    }
+
+    span2.onclick = function() {
+        modal2.style.display = "none";
+//        var symptomList = document.getElementById('symptomList');
+//        while (symptomList.firstChild) {
+//            symptomList.removeChild(symptomList.firstChild);
+//        }
     }
 
     // When the user clicks anywhere outside of the modal, close it
@@ -183,8 +203,6 @@ window.onload = function(){
         }
     }
 }
-
-
 
 </script>
 </body>
