--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -173,6 +173,26 @@ window.onload = function(){
                     diseaseList.appendChild(li);
                     console.log("level3");
                 }
+                $("#diseaseList").find(":button").click(function() {
+                    var tagText = $(this).val();
+                    $(function(callback) {
+                        $.ajax({
+                                url : '/getDisease',
+                                type : 'POST',
+                                dataType: 'json',
+                                data : JSON.stringify(tagText),
+                                contentType: "application/json; charset=utf-8",
+                                success : function(data) {
+                                    callback(data);
+                                    console.log("success");
+                                },
+                                error : function (error) {
+                                    console.log(error);
+                                }
+                        });
+                    });
+
+                });
             });
         });
 
