profilepage and layout change for description

--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -31,8 +31,11 @@
 
 
 <body style="background-color:#1aa8a8">
-<div class="top"><h1 id = "path"></h1></div>
-
+<div class="top" style="float:left"><h1>WebDoctor</h1></div>
+<div class="top" style="float:left"><h1>/</h1></div>
+<div class="top" style="float:left"><h1 id = "path1"></h1></div>
+<div class="top" style="float:left"><h1>/</h1></div>
+<div class="top" style="float:left"><h1 id = "path2"></h1></div>
 <div class="left">
     <a href="http://www.google.com" target="_blank">Related Articles</a><br>
 
