--- a/src/main/resources/static/profilePage.html
+++ b/src/main/resources/static/profilePage.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title style="color: #fefefe;">Your Profile</title>
 </head>
-<body>
-$END$
+<style>
+    a{
+        color: #fefefe;
+        padding: 14px 25px;
+    }
+</style>
+<body style="background-color: #1aa8b9">
+<h1 style="color: #fefefe; margin-left: 10px">Welcome!</h1>
+<div style="margin-top: 10px"><img src="http://www.tranmererovers.co.uk/images/common/bg_player_profile_default_big.png"/></div>
+<a href="http://www.google.com" target="_blank">Change Profile Photo</a><br>
+<h2 style="margin-top: 1.5cm">Interested Field</h2>
+<p>...............</p>
+<h2 style="margin-top: 1.5cm">Search History</h2>
+<p>...............</p>
 </body>
 </html>
