--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -21,11 +21,12 @@
     .main {
         position: absolute;
         font-size: 28px;
-        left:278px; top:92px; right:0; bottom:0;
+        left:218px; top:60px; right:0; bottom:0;
         color: #fefefe;
     }
     a {
         color: white;
+        font-size: medium;
     }
 </style>
 
