--- a/src/main/resources/static/authrityPage.html
+++ b/src/main/resources/static/authrityPage.html
@@ -3,7 +3,7 @@
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
 
-    function SignUp(username, callback) {
+    function authority() {
         console.log("222222222");
         var username1 = document.getElementById('username').value;
 
@@ -11,23 +11,7 @@
 
         obj.username = username1;
         console.log(username1);
-
-        $.ajax({
-            url : '/',
-            type : 'POST',
-            dataType: 'json',
-            data : JSON.stringify(obj),
-            contentType: "application/json; charset=utf-8",
-            success : function(data) {
-                callback(data);
-                console.log("success");
-            },
-            error : function (error) {
-                console.log(error);
-            }
-        });
     }
-
 
 </script>
 
@@ -82,7 +66,7 @@
 
         <div class="container">
             <input type="text" placeholder="Enter Username" id="username" name="username" required><br>
-            <button type="submit">Authority this user</button>
+            <button type="submit" onclick = "authority()">Authority this user</button>
         </div>
 
     </form>
