--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -1,73 +1,139 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+
+</head>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script>
+
+
+$(document).ready(function(){
+    $("#loginbtn").click(function() {
+        console.log("222222222");
+        var password1 = document.getElementById('password').value;
+        var username1 = document.getElementById('username').value;
+
+        var obj = {};
+
+        obj.username = username1;
+        obj.password = password1;
+        console.log(password1);
+        console.log(username1);
+        console.log("jjjjj");
+        $(function(callback) {
+            var i = $.ajax({
+                url : '/Login',
+                type : 'POST',
+                dataType: 'json',
+                data : JSON.stringify(obj),
+                contentType: "application/json; charset=utf-8",
+                success : function(data) {
+                    callback(data);
+                    console.log("success");
+                },
+                error : function (error) {
+                    console.log(error);
+                }
+
+            }).done(function(result) {
+                console.log(result);
+            });
+        });
+    });
+
+});
+
+</script>
 <style>
     body {
-        background-color: #1aa8a8;
+    background-color: #1aa8a8;
     }
 
     .middle {
-        text-align: center;
-        margin-top: 100px;
+    text-align: center;
+    margin-top: 100px;
     }
 
     form {
-        border: 3px solid #1aa8a8;
-        margin:0 auto;
-        vertical-align: middle;
+    border: 3px solid #1aa8a8;
+    margin:0 auto;
+    vertical-align: middle;
     }
 
     input[type=text], input[type=password] {
-        width: 50%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
     }
 
     button {
-        background-color: #0d57a0;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 50%;
+    background-color: #0d57a0;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 50%;
     }
 
     .imgcontainer {
-        text-align: center;
-        margin: 24px 0 12px 0;
+    text-align: center;
+    margin: 24px 0 12px 0;
     }
 
     .container {
     padding: 16px;
     }
 
-
-
+    .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     }
+
+    .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    }
+
+
 </style>
+
 <body>
 
 <div class="middle">
-<form action="action_page.php">
-    <div class="imgContainer">
-        <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
-    </div>
+    <form>
+        <div class="imgContainer">
+            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+        </div>
 
-    <div class="container">
-        <input type="text" placeholder="Enter Username" name="username" required><br>
-        <input type="password" placeholder="Enter Password" name="password" required><br>
-        <button type="submit">Login</button>
-        <button type="submit" style="background-color: #528b40">Create an account</button>
+        <div class="container">
+            <input type="text" placeholder="Enter Username" id="username" required><br>
+            <input type="password" placeholder="Enter Password" id="password" name="password" required><br>
 
-    </div>
+            <button id="loginbtn" type="button">Login!</button>
+            <button type="submit" style="background-color: red">Cancel</button>
 
-    <div class="container" style="background-color:#1aa8a8">
-        <a href="#">skip?</a>
-    </div>
-</form>
+        </div>
+
+    </form>
 </div>
+
 </body>
 </html>
